# gist604b-python-test

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: neighborhood_samples.geojson  temperature_readings.csv  weather_stations.csv
data/cities/: ne_cities_us.geojson
data/ecoregions/: epa_level3_western_us.geojson
data/protected_areas/: national_parks_major.geojson
notebooks/geopandas/: 00_download_real_data.ipynb  01_function_load_spatial_data.ipynb  02_function_explore_properties.ipynb  03_function_transform_crs.ipynb  04_function_geometry_operations.ipynb  05_function_spatial_relationships.ipynb  06_function_spatial_joins.ipynb  07_function_overlay_and_visualize.ipynb
notebooks/pandas/: 01_function_load_and_explore_gis_data.ipynb  02_function_filter_environmental_data.ipynb  03_function_calculate_station_statistics.ipynb  04_function_join_station_data.ipynb
notebooks/rasterio/: 01_function_image_search.ipynb  03_function_mask_time_series.ipynb  remote_sensing_workflow.ipynb
src/: download_real_data.py  geopandas_basics.py  pandas_basics.py  rasterio_basics.py
tests/: test_geopandas_basics.py  test_pandas_basics.py
