[project]
name = "python-gis-development"
version = "0.1.0"
description = "Python GIS development environment for pandas, GeoPandas, and Rasterio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.1,<4",
    "numpy>=2.4.3,<3",
    "geopandas>=1.1.3,<2",
    "rasterio>=1.4.4,<2",
    "shapely>=2.1.2,<3",
    "pyproj>=3.7.2,<4",
    "jupyter>=1.1.1,<2",
    "ipykernel>=7.2.0,<8",
    "pytest>=9.0.2,<10",
    "matplotlib>=3.10.8,<4",
    "pystac-client>=0.9.0,<1",
    "planetary-computer>=1.0.0,<2"
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
